--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.application.name=MailAuth_practice
 
-# ?? ??
 server.port= 4040
 
-# ??? ?? ??
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/mail_auth?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mariadb://localhost:3306/decode_closet ?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=developer
+spring.datasource.password=P@ssw0rd
 
 # JWT Secret Key
 secrect-key=ThisStatementIsJwtSecretKeyDoNotUseThisStatement
