--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,19 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/decode_closet?serverTimezone
 spring.datasource.username=developer
 spring.datasource.password=P@ssw0rd
 
+# Gmail ??
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=zizonhyunn@gmail.com
+spring.mail.password=iums yhxx oiry qmic
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 # JWT Secret Key
 secret-key=ThisStatementIsJwtSecretKeyDoNotUseThisStatement
+
+
 
 
 
